force-app/main/default/objects/Equipment__c.object
<CustomObject>
    <fields>
        <fullName>ABCIndicator__c</fullName>
        <label>ABCIndicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CatelogProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CatelogProfile</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>CatelogProfile</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Equipment (catelogProfile)</relationshipLabel>
        <relationshipName>Equipment5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FL_Text__c</fullName>
        <label>FL Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FL</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asset__c</fullName>
        <label>asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companyCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>companyCode</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>CompanyCode</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Equipment (companyCode)</relationshipLabel>
        <relationshipName>Equipment2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>costCenter__c</fullName>
        <label>costCenter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>equipmentCategory__c</fullName>
        <label>equipmentCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>location__c</fullName>
        <label>location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mainWorkCenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>mainWorkCenter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Main Work Center</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maintenancePlant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>maintenancePlant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Plant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Equipment (maintenancePlant)</relationshipLabel>
        <relationshipName>Equipment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>manufacturerNo__c</fullName>
        <label>manufacturerNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>manufacturer__c</fullName>
        <label>manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modelNo__c</fullName>
        <label>modelNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>plannerGroup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>PlannerGroup</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Equipment (plannerGroup)</relationshipLabel>
        <relationshipName>Equipment3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>planningPlant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>planningPlant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Plant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Equipment (planningPlant)</relationshipLabel>
        <relationshipName>Equipment4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>plantSection__c</fullName>
        <label>plantSection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortField__c</fullName>
        <label>sortField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subNumber__c</fullName>
        <label>subNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemStatus__c</fullName>
        <label>systemStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userStatus__c</fullName>
        <label>userStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object_Type__c</columns>
        <columns>CatelogProfile__c</columns>
        <columns>equipmentCategory__c</columns>
        <columns>FL__c</columns>
        <columns>FL_Text__c</columns>
        <columns>mainWorkCenter__c</columns>
        <columns>location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FL__c</field>
            <operation>equals</operation>
            <value>TEL-PABX-SS074-001</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>